Add recipe page content

--- a/recipes/scrambled-hot-dogs-and-eggs.html
+++ b/recipes/scrambled-hot-dogs-and-eggs.html
@@ -6,7 +6,36 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Scrambled Hot Dogs And Eggs</h1>
     <a href="/">Home</a>
+    <h1>Scrambled Hot Dogs And Eggs</h1>
+    <img
+      src="https://www.allrecipes.com/thmb/ePIvEWnqatyn6zpQVn7QJrzCbr4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11754244-ScrambledHotDogsandEggs-PeytonBeckwith-4x3-ce5534d8de6c4a8c86d656c0b75d1f17.jpg"
+      alt="Scrambled hot dogs and eggs served in a bowl with a fork beside it and blue cloth. Everything sits on top of a white table"
+    />
+    <h2>Description</h2>
+    <p>
+      These scrambled hot dogs and eggs are a fun breakfast or even lunch.
+      You'll need just 2 ingredients and about 5 minutes to make them.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1/2 tablespoon butter</li>
+      <li>1 hot dog, cut into 1/2-inch slices</li>
+      <li>1 large egg</li>
+      <li>1/4 teaspoon kosher salt</li>
+      <li>1/8 teaspoon freshly ground black pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Melt butter in a small nonstick skillet over medium heat. Add hot dogs
+        and cook until browned on all sides, about 2 minutes. Turn heat to down
+        to medium-low.
+      </li>
+      <li>
+        Whisk eggs with salt and pepper until well blended and pour over hot
+        dogs. Cook, stirring constantly until eggs are set. Serve immediately.
+      </li>
+    </ol>
   </body>
 </html>
