Update image description

--- a/recipes/easy-pumpkin-sausage-pancakes.html
+++ b/recipes/easy-pumpkin-sausage-pancakes.html
@@ -10,7 +10,7 @@
     <h1>Easy Pumpkin Sausage Pancakes</h1>
     <img
       src="https://www.allrecipes.com/thmb/8DL0O9ULn5v-AYhE2_-qqIZ4xk4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11781759-Sausage-Pumpkin-Pancakes-DDMFS-Beauty-4x3-5fdd51096967472499bd94123add293d.jpg"
-      alt="Scrambled hot dogs and eggs served in a bowl with a fork beside it and blue cloth. Everything sits on top of a white table"
+      alt="Pancakes on a plate with a bowl of syrup beside it. One of the pancakes split in half showing the sausage inside. It all sits on a brown table"
     />
     <h2>Description</h2>
     <p>
