Add links to recipes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/scrambled-hot-dogs-and-eggs.html"
-      >Scrambled Hot Dogs And Eggs</a
-    >
+    <ul>
+      <li>
+        <a href="recipes/scrambled-hot-dogs-and-eggs.html"
+          >Scrambled Hot Dogs And Eggs</a
+        >
+      </li>
+      <li>
+        <a href="recipes/easy-pumpkin-sausage-pancakes.html"
+          >Easy Pumpkin Sausage Pancakes</a
+        >
+      </li>
+      <li>
+        <a href="recipes/banana-bread-french-toast.html"
+          >Banana Bread French Toast</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
