Fix: add dimensions to images
Layout shifts would occur while page load was happening. Adding the
*width* and *height* attributes to `img` tags optimizes user experience
and page rendering performance.

--- a/recipes/banana-bread-french-toast.html
+++ b/recipes/banana-bread-french-toast.html
@@ -9,6 +9,8 @@
     <a href="/">Home</a>
     <h1>Banana Bread French Toast</h1>
     <img
+      width="750"
+      height="562"
       src="https://www.allrecipes.com/thmb/Iiz2twrMR74JXFY3UxAFpfD6taE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11774137-Banana-Bread-French-Toast-Peyton-Beckwith-Beauty-4x3-11f5e0d0c70142c18fba063f0f9b22f5.jpg"
       alt="Banana bread french toast with chopped fresh banana, whipped cream and syrup on top of it served on a plate."
     />
