--- a/recipes/easy-pumpkin-sausage-pancakes.html
+++ b/recipes/easy-pumpkin-sausage-pancakes.html
@@ -9,6 +9,8 @@
     <a href="/">Home</a>
     <h1>Easy Pumpkin Sausage Pancakes</h1>
     <img
+      width="750"
+      height="562"
       src="https://www.allrecipes.com/thmb/8DL0O9ULn5v-AYhE2_-qqIZ4xk4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11781759-Sausage-Pumpkin-Pancakes-DDMFS-Beauty-4x3-5fdd51096967472499bd94123add293d.jpg"
       alt="Pancakes on a plate with a bowl of syrup beside it. One of the pancakes split in half showing the sausage inside. It all sits on a brown table"
     />
