--- a/recipes/scrambled-hot-dogs-and-eggs.html
+++ b/recipes/scrambled-hot-dogs-and-eggs.html
@@ -9,6 +9,8 @@
     <a href="/">Home</a>
     <h1>Scrambled Hot Dogs And Eggs</h1>
     <img
+      width="750"
+      height="562"
       src="https://www.allrecipes.com/thmb/ePIvEWnqatyn6zpQVn7QJrzCbr4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11754244-ScrambledHotDogsandEggs-PeytonBeckwith-4x3-ce5534d8de6c4a8c86d656c0b75d1f17.jpg"
       alt="Scrambled hot dogs and eggs served in a bowl with a fork beside it and blue cloth. Everything sits on top of a white table"
     />
